--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,64 @@
     <link rel="icon" href="/img/delta_store.png" />
 </head>
 <body data-bs-theme="dark">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <%-include('layouts');%>
 
+    <style>
+      
+    </style>
 
     <div class="container mt-4">
+      <% messageSuccessTransaction.forEach(element => { %>
+      <!-- Modal untuk Test -->
+      <div class="modal fade" id="greetingModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="staticBackdropLabel">Notif Pembelian</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+            <%= element %>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-outline-danger btn-sm" data-bs-dismiss="modal">Tutup</button>
+              <a href="https://mail.google.com/mail/u/0/#inbox" class="btn btn-primary btn-sm">Masuk Email</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <% }) %>
+    
+
+      <% messageSuccessLogin.forEach(element => { %>
+        <div aria-live="polite" aria-atomic="true" class="position-relative">
+            <!-- Position it: -->
+            <!-- - `.toast-container` for spacing between toasts -->
+            <!-- - `top-0` & `end-0` to position the toasts in the upper right corner -->
+            <!-- - `.p-3` to prevent the toasts from sticking to the edge of the container  -->
+            <div class="toast-container top-0 end-0">
+                <div class="toast fade show ms-auto animate__animated animate__backInRight" role="alert" aria-live="assertive" aria-atomic="true" id="notification-toast">
+                    <div class="toast-header ">
+                        <div class="custom-avatar rounded me-2"></div>
+
+                        <strong class="">Notifikasi</strong>
+                        <small class="ms-auto"><span id="countdown">10</span> second ago</small>
+                    </div>
+                    <div class="toast-body">
+                        <%= element %>
+                         
+                    <div class="mt-2 pt-2 border-top">
+                        <!-- <button type="button" class="btn btn-primary btn-sm">Take action</button> -->
+                        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="toast">Close</button>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <% }) %>
+
       <h2 class="text-warning-emphasis">Delta Store</h2>
       <span class="small text-light fst-italic">membuat anda top-up lebih semangat</span>
       <hr>
@@ -115,5 +169,31 @@
         </div>  
       </div>
     </div>
+
+<!-- JavaScript to show the modal automatically -->
+<script>
+  $(document).ready(function() {
+    $('#greetingModal').modal('show');
+  });
+  </script>
+      <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var toast = new bootstrap.Toast(document.getElementById('notification-toast'), { delay: 10000 });
+            toast.show();
+
+            var countdownElement = document.getElementById('countdown');
+            var countdown = 10;
+
+            var countdownInterval = setInterval(function () {
+            countdown--;
+            countdownElement.textContent = countdown;
+            if (countdown <= 0) {
+                clearInterval(countdownInterval);
+            }
+            }, 1000);
+        });
+    </script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
