--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
             </div>
             <hr>
             
-            <div class="offcanvas-body mt-5">
+            <div class="offcanvas-body mt-2">
                 <!-- Card Profil -->
                 <div class="card">
                     <div class="card-body">
@@ -28,9 +28,14 @@
             
                             <!-- Pesan Sapaan -->
                             <div>
+                                <%
+                                    // Konversi string tanggal menjadi objek Date
+                                    const createdAtDate = new Date(session.user.createdAt);
+                                %>
                                 <% if (session && session.user) { %>
                                     <h5 class="card-title">Hai, <%= session.user.name %>!</h5>
-                                    <p class="fw-light mb-0">Selamat datang kembali! <br><small class="text-muted">telah bergabung pada {tgl}</small></p>
+                                    <p class="fw-light mb-0">Selamat datang kembali! <br><small class="text-muted">telah bergabung pada <%= createdAtDate.toLocaleDateString('id-ID', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' }) %></small></p>
+
                                 <% }  %>
                             </div>
                         </div>
@@ -40,17 +45,23 @@
 
 
                 <!-- Menu Navigasi Profil -->
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mt-3">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/rewards">Rewards</a>
+                <!-- <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mt-3">
+                    <li class="nav-item mb-2">
+                        <a class="btn btn-light" href="/rewards">Rewards</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/transaction-history">Riwayat Transaksi</a>
+                    <li class="nav-item mb-2">
+                        <a class="btn btn-warning" href="/transaction-history">Riwayat Transaksi</a>
                     </li>
-                    <li class="nav-item">
-                        <button class="btn btn-danger" type="button" onclick="logout()">Keluar</button>
+                    <li class="nav-item mb-2">
+                        <a class="btn btn-danger" href="/logout">Keluar</a>
                     </li>
-                </ul>
+                </ul> -->
+                <div class="d-grid gap-2">
+                    <a class="btn btn-outline-light" href="/rewards">Rewards</a>
+
+                     <a class="btn btn-outline-light" href="/transaction-history">Riwayat Transaksi</a>
+                     <a class="btn btn-danger" href="/logout">Keluar</a>
+                </div>
             </div>
             
             
